# devbot

./: .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-build.sh  docker-run.sh  redis.conf  start-bot.sh
src/: command.rs  event.rs  main.rs  slash_command.rs
